--- a/client/src/index.css
+++ b/client/src/index.css
@@ -178,7 +178,7 @@
 /* Print Styles for Charges Return Report */
 @media print {
   @page {
-    margin: 1.5cm 1cm;
+    margin: 1cm;
   }
 
   /* Page breaks between sheets */
